notes/k8s/demo/demo-pod.yml
apiVersion: v1
kind: Pod
metadata:
    name: kubia-pod
    namespace: jy-test
    labels:
        env: test
        lang: java
spec:
    containers:
        - name: kubia
          image: registry.cn-hangzhou.aliyuncs.com/jy-test/kubia
          ports:
              - containerPort: 8080
                protocol: TCP
          livenessProbe:
              initialDelaySeconds: 10
              periodSeconds: 60
              failureThreshold: 3
              httpGet:
                  port: 8080
                  path: /
