notes/k8s/demo/demo-depoy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: kubia-deploy
    namespace: jy-test
spec:
    replicas: 2
    minReadySeconds: 5
    selector:
        matchLabels:
            app: kubia
    template:
        metadata:
            name: kubia
            labels:
                app: kubia
        spec:
            containers:
                - name: kubia
                  image: registry.cn-hangzhou.aliyuncs.com/jy-test/kubia:latest
                  imagePullPolicy: Always
                  ports:
                      - containerPort: 8080

---

apiVersion: v1
kind: Service
metadata:
    name: kubia-svc
    namespace: jy-test
spec:
    ports:
        - port: 80
          name: http
          targetPort: 8080
    selector:
        app: kubia
