notes/k8s/demo/demo-endpoints.yml
apiVersion: v1
kind: Endpoints
metadata:
    name: external-service
    namespace: jy-test
subsets:
    - addresses:
          - ip: 10.44.0.1
          - ip: 10.36.0.2
      ports:
          - port: 8080
