notes/k8s/demo/demo-svc-nodeport.yml
apiVersion: v1
kind: Service
metadata:
    name: kubia-svc-nodeport
    namespace: jy-test
spec:
    type: NodePort
    ports:
        - port: 80
          name: http
          targetPort: 8080
          nodePort: 32001
    selector:
        app: kubia
